[package]
name = "tracing-valuable-test"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indexmap = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["json"] }
valuable = { version = "0.1", features = ["derive"] }
valuable-serde = { version = "0.1" }
